# ArthurExam-WebCrawler

./: .gitignore  ArthurExam.sln  README.md  WebCrawlar.sln  WebCrawlarCSharp.sln  running note.txt
ArthurExam/: Crawler.cs  Program.cs  Result.cs  results.json
WebCrawlar/: Crawler.cs  Program.cs  Result.cs  WebCrawler.csproj
WebCrawlar/Classes/: Results.cs
WebCrawlar/Models/: Arguments.cs  CombineUrl.cs  UrlToJson.cs
WebCrawlarCSharp/: Crawler.cs  Program.cs  WebCrawlerCSharp.csproj
WebCrawlarCSharp/Classes/: Result.cs
WebCrawlarCSharp/Models/: Arguments.cs  UrlToJson.cs  WriteToFile.cs
WebCrawlerCpp/: CMakeLists.txt
executable/: ArthurExam.deps.json  results.json
